# xsdata-experiments

./: LICENSE  README.md  makefile  pyproject.toml
experiment/: main.py  mixins.py  xml_converter.py  xsdata_config.xml
experiment/examples/: similar_types_choice_error.xml  similar_types_sequence_error.xml  xs_all_ordering_error.xml
experiment/models/: __init__.py  example_schema.py
experiment/schemas/: example_schema.xsd
